--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
 
     <string name="text_toggle1">Distribution</string>
     <string name="text_toggle2">Réception</string>
+    <string name="title_template">Jour %1$d : %2$s</string>
 </resources>
